get github action to produce artifact after building wasm port
Signed-off-by: xddd <156046252+dxddxx@users.noreply.github.com>

--- a/.github/workflows/ports_webassembly.yml
+++ b/.github/workflows/ports_webassembly.yml
@@ -31,3 +31,10 @@ jobs:
     - name: Print failures
       if: failure()
       run: tests/run-tests.py --print-failures
+      
+    # 👇 Add this step to save the WASM + JS output
+    - name: Upload WebAssembly artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: micropython-wasm
+        path: ports/webassembly/build/*
