--- a/.github/workflows/ports_webassembly.yml
+++ b/.github/workflows/ports_webassembly.yml
@@ -1,5 +1,4 @@
 name: webassembly port
-
 on:
   push:
   pull_request:
@@ -12,7 +11,6 @@ on:
       - 'lib/**'
       - 'ports/webassembly/**'
       - 'tests/**'
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -21,20 +19,31 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v5
-    - name: Install packages
-      run: source tools/ci.sh && ci_webassembly_setup
-    - name: Build
-      run: source tools/ci.sh && ci_webassembly_build
-    - name: Run tests
-      run: source tools/ci.sh && ci_webassembly_run_tests
-    - name: Print failures
-      if: failure()
-      run: tests/run-tests.py --print-failures
-      
-    # 👇 Add this step to save the WASM + JS output
-    - name: Upload WebAssembly artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: micropython-wasm
-        path: ports/webassembly/build/*
+      - uses: actions/checkout@v5
+
+      - name: Install packages
+        run: source tools/ci.sh && ci_webassembly_setup
+
+      - name: Build WASM
+        run: |
+          source tools/ci.sh
+          make -C ports/webassembly
+
+      - name: Run tests
+        run: source tools/ci.sh && ci_webassembly_run_tests
+
+      - name: Print failures
+        if: failure()
+        run: tests/run-tests.py --print-failures
+
+      - name: List build outputs
+        run: |
+          echo "Listing files under ports/webassembly after build:"
+          find ports/webassembly -type f | sed 's/^/ - /'
+
+      - name: Upload WebAssembly artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: micropython-wasm
+          path: |
+            ports/webassembly/build-*/micropython.*
